syntax = "proto3";

import "commons.proto";
import "gym.proto";
option java_package = "com.example.gbuddy.models.protos";

option java_outer_classname = "MatchLookupProto";

message MatchResponse {
  int32 responseCode = 1;
  string message = 16;
}

message MatchLookup {
  int32 id = 1;
  Status status = 5;
  AuthResponse user = 16;
  Gym gym = 17;
}

enum Status {
    MATCHED = 0;
    UNMATCHED = 1;
    REQUESTED = 2;
}

message LookupResponse {
  int32 responseCode = 1;
  string message = 2;
  repeated MatchLookup lookups = 17;
}

message Friend {
  int32 matchRequestId = 1;
  AuthResponse user = 16;
  Gym gym = 17;
}

message FriendResponse {
  int32 responseCode = 1;
  string message = 2;
  repeated Friend friends = 17;
}

message FriendRequest {
  int32 matchRequestId = 1;
  AuthResponse user = 16;
  Gym gym = 17;
}

message FriendRequestsResponse {
  int32 responseCode = 1;
  string message = 2;
  repeated FriendRequest friendRequests = 16;
}